force-app/main/default/objects/crms14__Foreign_Entity__c/crms14__Foreign_Entity__c.object-meta.xml
<CustomObject>
    <label>Foreign Entity</label>
    <nameField>
        <label>Foreign Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foreign Entity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>