force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Accounts_Must_File_Within_Month__c.field-meta.xml
<CustomField>
    <fullName>crms14__Accounts_Must_File_Within_Month__c</fullName>
    <label>Accounts Must File Within Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>