force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Accounts_Period_To_Day__c.field-meta.xml
<CustomField>
    <fullName>crms14__Accounts_Period_To_Day__c</fullName>
    <inlineHelpText>Day on which accounting period ends under parent law.</inlineHelpText>
    <label>Accounts Period To Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>