force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__AR_Foreign_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>crms14__AR_Foreign_Account_Type__c</fullName>
    <inlineHelpText>AR = Accounting Requirement</inlineHelpText>
    <label>AR Foreign Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>