force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__AR_Terms_Of_Account_Publication__c.field-meta.xml
<CustomField>
    <fullName>crms14__AR_Terms_Of_Account_Publication__c</fullName>
    <inlineHelpText>AR = Accounting Requirement</inlineHelpText>
    <label>AR Terms Of Account Publication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>