force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>crms14__Business_Activity__c</fullName>
    <label>Business Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>