force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Company__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company__c</fullName>
    <label>Company</label>
    <referenceTo>crms14__Company__c</referenceTo>
    <relationshipLabel>Foreign Entity</relationshipLabel>
    <relationshipName>Foreign_Entity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>