force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Company_Type__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company_Type__c</fullName>
    <label>Company Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>