force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Governed_By__c.field-meta.xml
<CustomField>
    <fullName>crms14__Governed_By__c</fullName>
    <label>Governed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>