force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Is_A_Credit_Finance_Institution__c.field-meta.xml
<CustomField>
    <fullName>crms14__Is_A_Credit_Finance_Institution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is A Credit Finance Institution</label>
    <type>Checkbox</type>
</CustomField>