force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>crms14__Legal_Form__c</fullName>
    <label>Legal Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>