force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Originating_Registry_Country__c.field-meta.xml
<CustomField>
    <fullName>crms14__Originating_Registry_Country__c</fullName>
    <label>Originating Registry Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>