force-app/main/default/objects/crms14__Foreign_Entity__c/fields/crms14__Originating_Registry_Name__c.field-meta.xml
<CustomField>
    <fullName>crms14__Originating_Registry_Name__c</fullName>
    <inlineHelpText>Identity of register in the country of incorporation.</inlineHelpText>
    <label>Originating Registry Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>